LIB-70 Fix scroll to top button vertical alignment

--- a/custom/themes/lib_unb_ca/src/scss/overrides/_scrollup.scss
+++ b/custom/themes/lib_unb_ca/src/scss/overrides/_scrollup.scss
@@ -22,7 +22,7 @@
     background-color: $white;
     display: block;
     content: " ";
-    margin-top: -25px;
+    margin-top: -27px;
     width: 100%;
     height: 100%;
     -webkit-mask-image: url(/modules/contrib/jquery_scrollup/misc/angle-up.svg);
